# nysys

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  format.ps1  result.json
examples/: example_c.c  example_cpp.cpp
include/nysys/: internal.hpp  nysys.h  nysys.hpp
include/nysys/helper/: json_structure.hpp  utils.hpp  wmi_helper.hpp
include/nysys/main/: audio_info.hpp  battery_info.hpp  cpu_info.hpp  gpu_info.hpp  memory_info.hpp  monitor_info.hpp  motherboard_info.hpp  network_info.hpp  storage_info.hpp
src/: nysys.cpp  nysys.def  nysys.rc
src/helper/: json_structure.cpp  wmi_helper.cpp
src/main/: audio_info.cpp  battery_info.cpp  cpu_info.cpp  gpu_info.cpp  memory_info.cpp  monitor_info.cpp  motherboard_info.cpp  network_info.cpp  storage_info.cpp
